--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Test</title>
+    <title>Startup Matchmaker</title>
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script src="js/xhrHandler.js"></script>
+
   </head>
   <body>
-    <p>
-      hello k
-    </p>
-    <p>See this?</p>
+    <div id="container">
+
+    </div>
+  <script src="js/index.js"></script>
   </body>
 </html>
