Updated Base & Index CSS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+
     <header>
         <h1>Startup Matchmaker</h1>
     </header>
@@ -27,7 +28,7 @@
       </div>
 
       <div id="banner">
-        <p><h1>Because two heads are better than one</h1></p>
+        <p><h4>Because two heads are better than one.</h4></p>
       </div>
 
       <div id="nav">
