--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Startup Matchmaker</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <script src="js/xhrHandler.js"></script>
 
   </head>
@@ -32,7 +32,7 @@
       </div>
 
       <div id="nav">
-        <div id="signup">
+        <div id="profile">
           <p><h2>Create A Profile</h2></p>
           <p>Want to build an app from scratch? Create a profile so others can find you!</p>
           <a href="/views/signup.html" class="button">Sign Up Now</a>
@@ -52,7 +52,7 @@
 
     </div>
 
-      <footer>
+      <footer id="index">
         <p id="copyright">&copy;2015 Startup Matchmaker. Made in LA.</p>
       </footer>
 
