--- a/index.html
+++ b/index.html
@@ -18,41 +18,40 @@
         <h1>Startup Matchmaker</h1>
     </header>
 
-    <div id="index">
-
-      <div id="match">
+      <div class="match">
         <p><h2>Meet Your Match!</h2></p>
         <p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find each other.</p>
-          <a href="/views/signup.html" class="button">Create Profile</a>
-          <a href="/views/team.html" class="button">Find Match</a>
+          <a href="/views/signup.html" class="matchbutton">Create Profile</a>
+          <a href="/views/team.html" class="matchbutton">Find Match</a>
       </div>
 
       <div id="banner">
-        <p><h4>Because two heads are better than one.</h4></p>
+        <p><h1>Because two heads are better than one.</h1></p>
       </div>
 
-      <div id="nav">
-        <div id="profile">
+      <div id="bottom">
+
+        <div class="profile">
           <p><h2>Create A Profile</h2></p>
           <p>Want to build an app from scratch? Create a profile so others can find you!</p>
           <a href="/views/signup.html" class="button">Sign Up Now</a>
         </div>
 
-        <div id="search">
+        <div class="search">
           <p><h2>Find a Developer</h2></p>
           <p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
           <a href="/views/team.html" class="button">Start your Search</a>
         </div>
 
-        <div id="login">
+        <div class="designer">
           <p><h2>Find a Designer</h2></p>
           <p>Need someone who can make a product intuitive and appealing? Get Ready.</p>
           <a href="/views/login.html" class="button">Login</a>
         </div>
 
-    </div>
+      </div>
 
-      <footer id="index">
+      <footer>
         <p id="copyright">&copy;2015 Startup Matchmaker. Made in LA.</p>
       </footer>
 
